[Hotfix] Scrolling issues on Our Team page on Safari/iOS (#261)

--- a/website/src/app/views/our-team/OurTeam.css
+++ b/website/src/app/views/our-team/OurTeam.css
@@ -15,7 +15,6 @@
   min-height: calc(96% - 275px);
   color: white;
   text-align: center;
-  overflow: scroll;
 }
 
 .ctc-ourteam-centered-container {
